GameFragment.kt refactor

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -23,7 +23,7 @@
 
         <variable
             name="game"
-            type="com.example.android.navigation.GameFragment" />
+            type="com.example.android.navigation.game.GameFragment" />
     </data>
 
     <ScrollView
